// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildList renders using ajax-loaded object data 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <ChildList
        pid="foo:123"
      >
        <ul>
          <li
            key="foo:123childfoo:124"
          >
            <Link
              to="/edit/object/foo:124"
            >
              <LinkAnchor
                href="/edit/object/foo:124"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:124"
                  onClick={[Function]}
                >
                  hello [foo:124]
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </ChildList>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`ChildList renders using ajax-loaded root data 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <ChildList>
        <ul>
          <li
            key="rootchildfoo:124"
          >
            <Link
              to="/edit/object/foo:124"
            >
              <LinkAnchor
                href="/edit/object/foo:124"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:124"
                  onClick={[Function]}
                >
                  hello [foo:124]
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </ChildList>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;
